feat(root): added link to v3 guidance site
added banenr and footer link to direct people to v3 guidance site

--- a/src/templates/Homepage/index.css
+++ b/src/templates/Homepage/index.css
@@ -52,6 +52,10 @@
   width: 18.75rem;
 }
 
+ic-alert ic-link {
+  padding-right: var(--ic-space-xs);
+}
+
 .hero .ic-typography-h4 .MuiSvgIcon-root {
   height: var(--ic-space-lg);
   width: var(--ic-space-lg);
